tests/lean/eqn_hole.lean.expected.out
eqn_hole.lean:3:7: error: don't know how to synthesize placeholder
state:
f : ℕ → ℕ
⊢ ℕ
eqn_hole.lean:8:13: error: don't know how to synthesize placeholder
state:
g : ℕ → ℕ,
n : ℕ
⊢ ℕ
